--- a/04_GAP_Different_Input_Size.ipynb
+++ b/04_GAP_Different_Input_Size.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Global Average Pooling "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -21,7 +28,6 @@
     }
    ],
    "source": [
-    "# 1. Import libraries and modules\n",
     "from tensorflow import keras\n",
     "from keras import layers\n",
     "from keras.models import Sequential\n",
@@ -33,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading pre-shuffled HODA data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -40,7 +53,6 @@
    },
    "outputs": [],
    "source": [
-    "# Load pre-shuffled HODA data into train and test sets\n",
     "X_train, y_train, X_test, y_test = load_hoda(\n",
     "                                            training_sample_size=3500,\n",
     "                                            test_sample_size=400,size=32)"
@@ -72,7 +84,7 @@
     "id": "Q00uVKx_UZhF"
    },
    "source": [
-    "# reshape"
+    "## reshaping Input Data"
    ]
   },
   {
@@ -98,7 +110,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Reshape to original image shape (n x 784)  ==> (n x 28 x 28 x 1)\n",
     "X_train_32 = X_train.reshape(-1,32,32,1)\n",
     "X_test_32 = X_test.reshape(-1,32,32,1)\n",
@@ -244,7 +255,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "# 4. Preprocess class labels\n",
     "y_train = keras.utils.to_categorical(y_train)\n",
     "y_test = keras.utils.to_categorical(y_test)\n"
@@ -410,13 +420,7 @@
       "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 45ms/step - accuracy: 0.9804 - loss: 0.0555 - val_accuracy: 0.9743 - val_loss: 0.0853\n",
       "Epoch 50/200\n",
       "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 46ms/step - accuracy: 0.9789 - loss: 0.0576 - val_accuracy: 0.9729 - val_loss: 0.0918\n",
-      "Epoch 51/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/200\n",
       "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step - accuracy: 0.9829 - loss: 0.0508 - val_accuracy: 0.9729 - val_loss: 0.0816\n",
       "Epoch 52/200\n",
       "\u001b[1m11/11\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 47ms/step - accuracy: 0.9809 - loss: 0.0575 - val_accuracy: 0.9686 - val_loss: 0.1039\n",
@@ -1409,7 +1413,7 @@
     "id": "EXAw4FU1aRUD"
    },
    "source": [
-    "## lets evaluate it with 28x28"
+    "## Lets evaluate it with 28x28"
    ]
   },
   {
@@ -1486,13 +1490,6 @@
    "source": [
     "model.evaluate(X_test_32, y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
